--- a/LA.tex
+++ b/LA.tex
@@ -52,10 +52,11 @@
 \input{chapters/forensics.tex}
 
 \input{chapters/related_words.tex}
-\input{chapters/propose_method.tex}
+\input{chapters/proposed_method.tex}
 % \include{ketluan}                           %%% có thể thay đổi
 % \include{chdanhmuccongbo}                   %%% có thể thay đổi
 
+\nocite{*}
 \VKngatTrang                                %%% ngắt trang để chuyển sang tài liệu tham khảo
 \VKtaiLieuThamKhao                          %%% tài liệu tham khảo
 \VKdanhSoPhuLuc                             %%% bắt đầu đánh số cho phụ lục
