--- a/bibdmt.bib
+++ b/bibdmt.bib
@@ -22,9 +22,14 @@
   publisher={Elsevier}
 }
 
-@online{windowsStat,
-  title = {Windows Market share},
+@online{osMarketShare,
+  title = {Operating system market share},
   url = {https://gs.statcounter.com/os-market-share/desktop/worldwide}
+}
+
+@online{windowsShare,
+  title = {Windows version market share},
+  url = {https://gs.statcounter.com/windows-version-market-share/desktop/worldwide/}
 }
 
 @online{kdbgEncoded,
@@ -177,4 +182,57 @@
   pages = {104-115},
   title = {Pool Allocations as an Information Source in Windows Memory Forensics.},
   journal = {IMF}
+}
+
+@article{evolutionHidding,
+  author = {Eresheim, Sebastian and Luh, Robert and Schrittwieser, Sebastian},
+  year = {2017},
+  month = {09},
+  pages = {866-874},
+  title = {The Evolution of Process Hiding Techniques in Malware - Current Threats and Possible Countermeasures},
+  volume = {25},
+  journal = {Journal of Information Processing},
+  doi = {10.2197/ipsjjip.25.866}
+}
+
+@online{processdump
+  author = {Geoff McDonald},
+  title = {Process-Dump}
+  url = {https://github.com/glmcdona/Process-Dump}
+}
+
+@online{memtriage,
+  author = {Jamie Levy},
+  title = {memtriage},
+  url = {https://github.com/gleeda/memtriage}
+}
+
+@online{rekall,
+  author = {Google},
+  title = {Rekall},
+  url = {http://www.rekall-forensic.com/}
+}
+
+@online{volatility,
+  author = {Volatility Foundation},
+  title = {Volatility},
+  url = {https://github.com/volatilityfoundation/volatility}
+}
+
+@online{sysinternal,
+  author = {Mark Russinovich},
+  title = {Sysinternals Suite},
+  url = {https://docs.microsoft.com/en-us/sysinternals/downloads/sysinternals-suite}
+}
+
+@online{unioncrypto,
+  author = {Patrick Wardle},
+  title = {Lazarus goes "fileless"},
+  url = {https://objective-see.com/blog/blog_0x51.html}
+}
+
+@online{vergilius,
+  author = {Svitlana Storchak and Sergey Podobry},
+  title = {Vergilius project},
+  url = {https://www.vergiliusproject.com/}
 }
