--- a/bibdmt.bib
+++ b/bibdmt.bib
@@ -78,7 +78,7 @@
 @online{pdb-downloader,
   title = {pdb-downloader},
   url = {https://blogs.msdn.microsoft.com/webtopics/2016/03/07/pdb-downloader/},
-  author = {rajkumar-rangaraj}
+  author = {Rajkumar Rangaraj}
 }
 
 @online{yararules,
@@ -195,7 +195,7 @@
   doi = {10.2197/ipsjjip.25.866}
 }
 
-@online{processdump
+@online{processdump,
   author = {Geoff McDonald},
   title = {Process-Dump}
   url = {https://github.com/glmcdona/Process-Dump}
@@ -235,4 +235,10 @@
   author = {Svitlana Storchak and Sergey Podobry},
   title = {Vergilius project},
   url = {https://www.vergiliusproject.com/}
+}
+
+@online{processinjection,
+  author = {Amit Klein, Itzik Kotler},
+  title = {Windows Process Injection in 2019}
+  url = {https://i.blackhat.com/USA-19/Thursday/us-19-Kotler-Process-Injection-Techniques-Gotta-Catch-Them-All-wp.pdf}
 }
