--- a/bibdmt.bib
+++ b/bibdmt.bib
@@ -24,22 +24,26 @@
 
 @online{osMarketShare,
   title = {Operating system market share},
-  url = {https://gs.statcounter.com/os-market-share/desktop/worldwide}
+  url = {https://gs.statcounter.com/os-market-share/desktop/worldwide},
+  year = {2019}
 }
 
 @online{windowsShare,
   title = {Windows version market share},
-  url = {https://gs.statcounter.com/windows-version-market-share/desktop/worldwide/}
+  url = {https://gs.statcounter.com/windows-version-market-share/desktop/worldwide/},
+  year = {2019}
 }
 
 @online{kdbgEncoded,
   title = {Volatility on windows 8 encoded KDBG},
-  url = {https://volatility-labs.blogspot.com/2014/01/the-secret-to-64-bit-windows-8-and-2012.html}
+  url = {https://volatility-labs.blogspot.com/2014/01/the-secret-to-64-bit-windows-8-and-2012.html},
+  year = {2016}
 }
 
 @online{rekallOnKDBGEncoding,
   title = {ReKall on windows 8 encoded KDBG},
-  url = {http://web.rekall-innovations.com/posts/2014-02-21-do-we-need-kdbg.html}
+  url = {http://web.rekall-innovations.com/posts/2014-02-21-do-we-need-kdbg.html},
+  year = {2014}
 }
 
 @article{Carrier02definingdigital,
@@ -72,19 +76,22 @@
 
 @online{microsoft-pdb,
   title = {microsoft-pdb},
-  url = {https://github.com/microsoft/microsoft-pdb}
+  url = {https://github.com/microsoft/microsoft-pdb},
+  year = {2016}
 }
 
 @online{pdb-downloader,
   title = {pdb-downloader},
   url = {https://blogs.msdn.microsoft.com/webtopics/2016/03/07/pdb-downloader/},
-  author = {Rajkumar Rangaraj}
+  author = {Rajkumar Rangaraj},
+  year = {2016}
 }
 
 @online{yararules,
   title = {Explained: YARA rules},
   author = {Pieter Arntz},
-  url = {https://blog.malwarebytes.com/security-world/technology/2017/09/explained-yara-rules/}
+  url = {https://blog.malwarebytes.com/security-world/technology/2017/09/explained-yara-rules/},
+  year = {2017}
 }
 
 @article{windowsKernelCharacterization,
@@ -101,24 +108,28 @@
 @online{GeoffChappell,
   author = {Geoff Chappell},
   title = {Kernel-Mode Windows},
-  url = {https://www.geoffchappell.com/studies/windows/km/index.htm}
+  url = {https://www.geoffchappell.com/studies/windows/km/index.htm},
+  year = {2019}
 }
 
 @online{nirsoft,
   author = {},
   title = {Nirsoft Windows kernel struct},
-  url = {http://www.nirsoft.net/}
+  url = {http://www.nirsoft.net/},
+  year = {2019}
 }
 
 @online{reactos,
   author = {ReactOS Team},
   title = {ReactOS source code},
-  url = {https://reactos.org/}
+  url = {https://reactos.org/},
+  year = {2019}
 }
 
 @online{windowsMalwareStat,
   title = {Operating systems most affected by malware as of 1st quarter 2019},
-  url = {https://www.statista.com/statistics/680943/malware-os-distribution/}
+  url = {https://www.statista.com/statistics/680943/malware-os-distribution/},
+  year = {2019}
 }
 
 @article{volatools,
@@ -153,18 +164,22 @@
 
 @online{memorylimit,
   title = {Memory Limits for Windows and Windows Server Releases},
-  url = {https://docs.microsoft.com/en-us/windows/win32/memory/memory-limits-for-windows-releases}
+  url = {https://docs.microsoft.com/en-us/windows/win32/memory/memory-limits-for-windows-releases},
+  year = {2018}
 }
 
 @online{dmpfile,
+  author = {Andreas Schuster},
   title = {DMP File Structure},
-  url = {https://computer.forensikblog.de/en/2006/03/dmp-file-structure.html}
+  url = {https://computer.forensikblog.de/en/2006/03/dmp-file-structure.html},
+  year = {2006}
 }
 
 @online{mdmpfile,
   title = {Minidump (MDMP) format},
-  url = {https://github.com/libyal/libmdmp/blob/master/documentation/Minidump\%20(MDMP)\%20format.asciidoc},
-  author = {Joachim Metz}
+  url = {https://github.com/libyal/libmdmp/blob/master/documentation/Minidump (MDMP) format.asciidoc},
+  author = {Joachim Metz},
+  year = {2017}
 }
 
 @article{coldboot,
@@ -172,7 +187,7 @@
   year = {2008},
   month = {01},
   pages = {45-60},
-  title = {Lest We Remember: Cold Boot Attacks on Encryption Keys.}
+  title = {Lest We Remember: Cold Boot Attacks on Encryption Keys}
 }
 
 @article{pooltagscan,
@@ -180,7 +195,7 @@
   year = {2006},
   month = {01},
   pages = {104-115},
-  title = {Pool Allocations as an Information Source in Windows Memory Forensics.},
+  title = {Pool Allocations as an Information Source in Windows Memory Forensics},
   journal = {IMF}
 }
 
@@ -198,47 +213,55 @@
 @online{processdump,
   author = {Geoff McDonald},
   title = {Process-Dump}
-  url = {https://github.com/glmcdona/Process-Dump}
+  url = {https://github.com/glmcdona/Process-Dump},
+  year = {2019}
 }
 
 @online{memtriage,
   author = {Jamie Levy},
   title = {memtriage},
-  url = {https://github.com/gleeda/memtriage}
+  url = {https://github.com/gleeda/memtriage},
+  year = {2019}
 }
 
 @online{rekall,
   author = {Google},
   title = {Rekall},
-  url = {http://www.rekall-forensic.com/}
+  url = {http://www.rekall-forensic.com/},
+  year = {2019}
 }
 
 @online{volatility,
   author = {Volatility Foundation},
   title = {Volatility},
-  url = {https://github.com/volatilityfoundation/volatility}
+  url = {https://www.volatilityfoundation.org/},
+  year = {2018}
 }
 
 @online{sysinternal,
   author = {Mark Russinovich},
   title = {Sysinternals Suite},
-  url = {https://docs.microsoft.com/en-us/sysinternals/downloads/sysinternals-suite}
+  url = {https://docs.microsoft.com/en-us/sysinternals/downloads/sysinternals-suite},
+  year = {2019}
 }
 
 @online{unioncrypto,
   author = {Patrick Wardle},
   title = {Lazarus goes "fileless"},
-  url = {https://objective-see.com/blog/blog_0x51.html}
+  url = {https://objective-see.com/blog/blog_0x51.html},
+  year = {2019}
 }
 
 @online{vergilius,
   author = {Svitlana Storchak and Sergey Podobry},
   title = {Vergilius project},
-  url = {https://www.vergiliusproject.com/}
+  url = {https://www.vergiliusproject.com/},
+  year = {2019}
 }
 
 @online{processinjection,
   author = {Amit Klein, Itzik Kotler},
-  title = {Windows Process Injection in 2019}
-  url = {https://i.blackhat.com/USA-19/Thursday/us-19-Kotler-Process-Injection-Techniques-Gotta-Catch-Them-All-wp.pdf}
+  title = {Windows Process Injection in 2019},
+  url = {https://i.blackhat.com/USA-19/Thursday/us-19-Kotler-Process-Injection-Techniques-Gotta-Catch-Them-All-wp.pdf},
+  year = {2019}
 }
