--- a/trangbia.tex
+++ b/trangbia.tex
@@ -15,7 +15,7 @@ Faculty of Computer Science and Engineering
 \rule[0.5ex]{\linewidth}{2pt}\vspace*{-\baselineskip}\vspace*{3.2pt}
 \rule[0.5ex]{\linewidth}{1pt}\\[\baselineskip]
 {\huge \textcolor{blue}{Windows Memory Forensics}}\\[4mm]
-{\Large \textit{\textcolor{blue}{Finding hidden processes in running machine}}}\\
+{\Large \textit{\textcolor{blue}{Finding hidden processes in a running machine}}}\\
 \rule[0.5ex]{\linewidth}{1pt}\vspace*{-\baselineskip}\vspace{3.2pt}
 \rule[0.5ex]{\linewidth}{2pt}\\
 \vspace{6.5mm}
@@ -25,20 +25,21 @@ Faculty of Computer Science and Engineering
 \vspace{15mm}
 
 \begin{minipage}{10cm}
-A thesis proposal submitted to the Ho Chi Minh city University of Technology in accordance with the requirements of the degree of \textsc{Degree of Engineer} in Computer Science.
+A thesis proposal submitted to the Ho Chi Minh City University of Technology in accordance with the requirements of the \textsc{Degree of Engineer} in Computer Science.
 \end{minipage}\\
 
 
-\vspace{10mm}
+\vspace{8mm}
 \begin{center}
 \begin{tabular}{ r l }
 \textbf{Instructors}:& \Large \textsc{NGUYEN An Khuong}\\
 & \Large \textsc{NGUYEN Le Thanh}\\
 & \Large \textsc{NGUYEN Quoc Bao}\\
+\textbf{Opponent}:& \Large \textsc{Dr. LE Thanh Sach}\\
 \end{tabular}
 \end{center}
 \vspace{6mm}
-{\large Ho Chi Minh city, \textsc{December 2019}}
+{\large Ho Chi Minh City, \textsc{December 2019}}
 \vspace{12mm}
 \end{center}
 % \end{adjustwidth*}
