--- a/bibdmt.bib
+++ b/bibdmt.bib
@@ -87,6 +87,20 @@
   year = {2016}
 }
 
+@online{pdbparse,
+  title = {PDB parser},
+  url = {https://github.com/moyix/pdbparse},
+  author = {Brendan Dolan-Gavitt},
+  year = {2012}
+}
+
+@online{pdbrust,
+  title = {PDB parser in Rust},
+  url = {https://github.com/willglynn/pdb},
+  author = {Will Glynn},
+  year = {2017}
+}
+
 @online{yararules,
   title = {Explained: YARA rules},
   author = {Pieter Arntz},
@@ -113,7 +127,7 @@
 }
 
 @online{nirsoft,
-  author = {},
+  author = {Nirsoft},
   title = {Nirsoft Windows kernel struct},
   url = {http://www.nirsoft.net/},
   year = {2019}
@@ -212,7 +226,7 @@
 
 @online{processdump,
   author = {Geoff McDonald},
-  title = {Process-Dump}
+  title = {Process-Dump},
   url = {https://github.com/glmcdona/Process-Dump},
   year = {2019}
 }
@@ -264,4 +278,123 @@
   title = {Windows Process Injection in 2019},
   url = {https://i.blackhat.com/USA-19/Thursday/us-19-Kotler-Process-Injection-Techniques-Gotta-Catch-Them-All-wp.pdf},
   year = {2019}
+}
+
+@online{memoryAcquisition,
+  author = {Mike Cohen},
+  title = {Virtual Secure Mode and memory acquisition},
+  url = {http://blog.rekall-forensic.com/2018/09/virtual-secure-mode-and-memory.html},
+  year = {2018}
+}
+
+@inproceedings{robussignature,
+  author = {Dolan-Gavitt, Brendan and Srivastava, Abhinav and Traynor, Patrick and Giffin, Jonathon},
+  year = {2009},
+  month = {01},
+  pages = {566-577},
+  title = {Robust signatures for kernel data structures},
+  journal = {Proceedings of the ACM Conference on Computer and Communications Security},
+  doi = {10.1145/1653662.1653730}
+}
+
+@ONLINE {robinhood,
+    author = "Lawrence Abrams",
+    title  = "Ransomware Exploits GIGABYTE Driver to Kill AV Processes",
+    month  = "feb",
+    year   = "2020",
+    url    = "https://www.bleepingcomputer.com/news/security/ransomware-exploits-gigabyte-driver-to-kill-av-processes/"
+}
+
+@ONLINE {ghosthook,
+    author = "Catalin Cimpanu",
+    title  = "New GhostHook Attack Bypasses Windows PatchGuard Protections",
+    month  = "jun",
+    year   = "2017",
+    url    = "https://www.bleepingcomputer.com/news/security/new-ghosthook-attack-bypasses-windows-patchguard-protections/"
+}
+
+@ONLINE {infinityhook,
+    author = "Nick Peterson",
+    title  = "Infinity Hook",
+    month  = "jul",
+    year   = "2017",
+    url    = "https://github.com/everdox/InfinityHook"
+}
+
+@ONLINE {byepg,
+    author = "Can Bölük",
+    title  = "ByePg",
+    month  = "oct",
+    year   = "2019",
+    url    = "https://github.com/can1357/ByePg"
+}
+
+@ONLINE {cylance,
+    author = "Upayan",
+    title  = "How I evaded “next-generation” Cylance Smart AntiVirus in less than 15 minutes",
+    month  = "apr",
+    year   = "2020",
+    url    = "https://slaeryan.github.io/posts/cylance-smartav-bypass.html"
+}
+
+@ARTICLE{autosignature,  author={A. {Atzeni} and F. {Díaz} and A. {Marcelli} and A. {Sánchez} and G. {Squillero} and A. {Tonda}},  journal={IEEE Access},   title={Countering Android Malware: A Scalable Semi-Supervised Approach for Family-Signature Generation},   year={2018},  volume={6},  number={},  pages={59540-59556},}
+
+@article{mlmalware,
+author = {Gibert, Daniel and Mateu, Carles and Planes, Jordi},
+year = {2020},
+month = {01},
+pages = {},
+title = {The rise of machine learning for detection and classification of malware: Research developments, trends and challenges},
+journal = {Journal of Network and Computer Applications},
+doi = {10.1016/j.jnca.2019.102526}
+}
+
+@article{case2020hooktracer,
+  title={Hooktracer: Automatic Detection and Analysis of Keystroke Loggers Using Memory Forensics},
+  author={Case, Andrew and Maggio, Ryan D and Firoz-Ul-Amin, Md and Jalalzai, Mohammad M and Ali-Gombe, Aisha and Sun, Mingxuan and Richard III, Golden G},
+  journal={Computers \& Security},
+  pages={101872},
+  year={2020},
+  publisher={Elsevier}
+}
+
+
+@article{pteremap,
+author = {St\"{u}ttgen, Johannes and Cohen, Michael},
+title = {Anti-Forensic Resilient Memory Acquisition},
+year = {2013},
+issue_date = {August, 2013},
+publisher = {Elsevier Science Publishers B. V.},
+address = {NLD},
+volume = {10},
+issn = {1742-2876},
+url = {https://doi.org/10.1016/j.diin.2013.06.012},
+doi = {10.1016/j.diin.2013.06.012},
+journal = {Digit. Investig.},
+month = aug,
+pages = {S105–S115},
+numpages = {11},
+keywords = {Memory acquisition, Incident response, Information security, Memory forensics, Live forensics, Malware, Anti forensics, Computer security}
+}
+
+@ONLINE {onaccessscan,
+    author = "McAfee",
+    title  = "How on-access scanning works",
+    month  = "jan",
+    year   = "2018",
+    url    = "https://docs.mcafee.com/bundle/endpoint-security-10.5.0-threat-prevention-product-guide-epolicy-orchestrator-windows/page/GUID-5A870D4E-FFBB-4F32-866E-A0F26F327501.html"
+}
+
+@ONLINE {processhacker,
+    author = "Steven G, Wen Jia Liu",
+    title  = "Process Hacker",
+    year   = "2020",
+    url    = "https://processhacker.sourceforge.io/"
+}
+
+@ONLINE {winpmem,
+    author = "Michael Cohen",
+    title  = "WinPmem",
+    year   = "2015",
+    url    = "https://github.com/Velocidex/c-aff4/tree/master/tools/pmem"
 }
