--- a/trangbia.tex
+++ b/trangbia.tex
@@ -22,25 +22,24 @@ Faculty of Computer Science and Engineering
 {\large By}\\
 \vspace{6.5mm}
 {\Large\textsc{NGUYEN Anh Khoa - 1611617}}\\
-\vspace{15mm}
+{\Large\textsc{\textbf{Major}: Computer Science}}\\
+\vspace{12mm}
 
-\begin{minipage}{10cm}
-A thesis proposal submitted to the Ho Chi Minh City University of Technology in accordance with the requirements of the \textsc{Degree of Engineer} in Computer Science.
+\begin{minipage}{12cm}
+A dissertation submitted to the University of Technology, VNU-HCM in accordance with the requirements of the DEGREE OF ENGINEER in Computer Science.
 \end{minipage}\\
 
-
-\vspace{8mm}
+\vspace{6mm}
 \begin{center}
 \begin{tabular}{ r l }
-\textbf{Instructors}:& \Large \textsc{NGUYEN An Khuong}\\
-& \Large \textsc{NGUYEN Le Thanh}\\
-& \Large \textsc{NGUYEN Quoc Bao}\\
-\textbf{Opponent}:& \Large \textsc{Dr. LE Thanh Sach}\\
+\textbf{Instructors}:& \Large \textsc{Dr. NGUYEN An Khuong}\\
+& \Large \textsc{Mr. NGUYEN Le Thanh}\\
+& \Large \textsc{Mr. NGUYEN Quoc Bao}\\
+\textbf{Opponent}:& \Large \textsc{Dr. TRAN Tuan Anh}\\
 \end{tabular}
 \end{center}
-\vspace{6mm}
-{\large Ho Chi Minh City, \textsc{December 2019}}
-\vspace{12mm}
+\vspace{7mm}
+{\large Ho Chi Minh City, \textsc{July 2020}}
 \end{center}
 % \end{adjustwidth*}
 \end{singlespace}
