--- a/vietkey.luanan.1.2.cls
+++ b/vietkey.luanan.1.2.cls
@@ -336,7 +336,7 @@ textfont=it]{caption}  % định dạng tiêu đề hình ảnh bảng biểu
 \RequirePackage[backend=bibtex,
                 bibstyle=luanan,
                 % style=ieee,
-                sorting=nyvt,
+                sorting=none,
                 block=none,
                 %defernumbers=true,
                 babel=other
