--- a/LA.tex
+++ b/LA.tex
@@ -12,7 +12,7 @@
 \usepackage[backend=bibtex,
             bibstyle=luanan,
             % style=ieee,
-            sorting=nyvt,
+            sorting=none,
             block=none,
             %defernumbers=true,
             babel=other]{biblatex}
@@ -21,11 +21,40 @@
 \usepackage{fancyvrb}
 \usepackage{dirtytalk}
 \usepackage{listing}
+\usepackage{listings-rust}
 \usepackage[acronym]{glossaries}
+
+
+\lstdefinelanguage{windbg}{
+      % backgroundcolor=\color{black!10},
+      % basicstyle=\footnotesize \ttfamily \color{black} \bfseries,
+      breakatwhitespace=false,
+      breaklines=false,
+      captionpos=t,
+      % commentstyle=\color{dkgreen},
+      deletekeywords={...},
+      escapeinside={\%*}{*)},
+      frame=tb,
+      keywordstyle=\color{purple},
+      morekeywords={kd,dt,Ptr64,Void,UChar,Uint4B,Uint8B,Int4B,Int2B,long,void},
+      identifierstyle=\color{black},
+      stringstyle=\color{blue},
+      numbers=left,
+      numbersep=5pt,
+      numberstyle=\tiny\color{black},
+      rulecolor=\color{black},
+      showspaces=false,
+      showstringspaces=false,
+      showtabs=false,
+      stepnumber=1,
+      tabsize=4,
+      basicstyle=\linespread{1}\tiny\ttfamily,
+      title=\lstname,
+}
 
 \lstdefinelanguage{cpp}{
       % backgroundcolor=\color{black!10},
-      basicstyle=\footnotesize \ttfamily \color{black} \bfseries,
+      % basicstyle=\footnotesize \ttfamily \color{black} \bfseries,
       breakatwhitespace=false,
       breaklines=false,
       captionpos=t,
@@ -47,9 +76,19 @@
       showtabs=false,
       stepnumber=1,
       tabsize=4,
-      basicstyle=\linespread{1}\footnotesize\ttfamily,
+      basicstyle=\linespread{1}\tiny\ttfamily,
       title=\lstname,
 }
+
+% Use hyphens PassOptions to add hyphenation in long urls
+% \PassOptionsToPackage{hyphens}{url}\usepackage[unicode]{hyperref}
+
+% Do not use these two following settings, which cause weird paragraph spacing
+% \widowpenalty=1000 % remove widow lines
+% \clubpenalty=1000 % remove orphan lines
+
+\hyphenpenalty 10000
+% \exhyphenpenalty 10000
 
 \DeclareCaptionFormat{listing}{\rule{\dimexpr\textwidth+1pt\relax}{0.1pt}\vspace{-6pt}\par#1#2#3}
 \captionsetup[lstlisting]{format=listing,singlelinecheck=false, margin=0pt, font={sf},labelsep=space,labelfont=bf}
@@ -91,13 +130,15 @@
 \blankpage
 % \include{loinoidau}                         %%% có thể thay đổi
 
-\input{chapters/introduction.tex}
-\chapter[Background]{Background}
-\input{chapters/operating_system.tex}
-\input{chapters/windows_internal.tex}
-\input{chapters/forensics.tex}
-\input{chapters/related_words.tex}
-\input{chapters/proposed_method.tex}
+\input{chapters/1.introduction.tex}
+\input{chapters/2.background.tex}
+\input{chapters/3.relatedworks.tex}
+\input{chapters/extra.technology.tex}
+\input{chapters/4.proposal.tex}
+\input{chapters/5.experiments.tex}
+\input{chapters/6.discussion.tex}
+\input{chapters/conclusion.tex}
+
 % \include{ketluan}                           %%% có thể thay đổi
 % \include{chdanhmuccongbo}                   %%% có thể thay đổi
 
